Sensornamen aangepast (stro, isovlas, cellulose en hemkor)

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -16,9 +16,9 @@
     </button>
     <div class="top-right-buttons">
         <button onclick="location.href='dashboard1.html'" class="stro-btn">Stro</button>
-        <button onclick="location.href='dashboard2.html'" class="stro-btn">Stro</button>
-        <button onclick="location.href='dashboard3.html'" class="stro-btn">Stro</button>
-        <button onclick="location.href='dashboard4.html'" class="stro-btn">Stro</button>
+        <button onclick="location.href='dashboard2.html'" class="stro-btn">Isovlas</button>
+        <button onclick="location.href='dashboard3.html'" class="stro-btn">Cellulose</button>
+        <button onclick="location.href='dashboard4.html'" class="stro-btn">Hemkor</button>
     </div>
     <div class="section section1">
         <header>
