--- a/dashboard2.html
+++ b/dashboard2.html
@@ -16,13 +16,13 @@
     </button>
     <div class="top-right-buttons">
         <button onclick="location.href='dashboard1.html'" class="stro-btn">Stro</button>
-        <button onclick="location.href='dashboard2.html'" class="stro-btn">Stro</button>
-        <button onclick="location.href='dashboard3.html'" class="stro-btn">Stro</button>
-        <button onclick="location.href='dashboard4.html'" class="stro-btn">Stro</button>
+        <button onclick="location.href='dashboard2.html'" class="stro-btn">Isovlas</button>
+        <button onclick="location.href='dashboard3.html'" class="stro-btn">Cellulose</button>
+        <button onclick="location.href='dashboard4.html'" class="stro-btn">Hemkor</button>
     </div>
     <div class="section section1">
         <header>
-            <h1>Stro (Sensor 2)</h1>
+            <h1>Isovlas (Sensor 2)</h1>
             <p class="intro-text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
