Aanpassingen voor de presentatie

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -42,11 +42,9 @@
     <div class="dashboard-page active" id="page-stro">
       <div class="section section1">
         <header>
-          <h1>Stro (Sensor 1)</h1>
+          <h1>Stro</h1>
           <p class="intro-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            Stro is een verrassend slim isolatiemateriaal dat perfect past bij een duurzame levensstijl. Het is een restproduct uit de landbouw en daarmee niet alleen milieuvriendelijk, maar ook goedkoop en ruim beschikbaar. Dankzij de uitstekende isolerende eigenschappen houdt stro je huis warm in de winter en koel in de zomer. Bovendien is het volledig biologisch afbreekbaar én draagt het bij aan een lagere CO₂-uitstoot. Dus ben je op zoek naar een groene, gezellige én slimme manier om te isoleren? Denk dan eens aan stro!
           </p>
         </header>
       </div>
@@ -100,11 +98,9 @@
     <div class="dashboard-page" id="page-isovlas">
       <div class="section section1">
         <header>
-          <h1>Isovlas (Sensor 2)</h1>
+          <h1>Isovlas</h1>
           <p class="intro-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            Isovlas is een natuurlijk isolatiemateriaal gemaakt van vlasvezels, een restproduct uit de textielindustrie. Het is ademend, vochtregulerend en zorgt voor een gezond binnenklimaat zonder schadelijke stoffen. Ideaal voor de duurzame bouwer die comfort én milieubewustzijn belangrijk vindt. Isovlas is volledig recyclebaar en heeft een lage ecologische voetafdruk. Kortom: met isovlas kies je voor warm wonen én een koel geweten!
           </p>
         </header>
       </div>
@@ -115,23 +111,23 @@
         <div class="sub-section sub2">
           <div class="hex-grid">
             <div class="hex-row even">
-              <div class="hex"><div class="hex-content">Binnentemp<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Buitensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Binnentemp<br><span id="binnen_isovlas">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum1_isovlas">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Buitensensor<br><span id="temp1_isovlas">N/A</span></div></div>
               <div class="line-right-1"></div>
             </div>
             <div class="hex-row odd">
-              <div class="hex"><div class="hex-content">Buitentemp<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Middensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Buitentemp<br><span id="buiten_isovlas">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum2_isovlas">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Middensensor<br><span id="temp2_isovlas">N/A</span></div></div>
               <div class="line-right-2"></div>
             </div>
             <div class="hex-row even2">
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Binnensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum3_isovlas">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Binnensensor<br><span id="temp3_isovlas">N/A</span></div></div>
               <div class="line-right-3"></div>
             </div>  
-          </div>         
+          </div>
         </div>
         <div class="sub-section sub3">
           <img src="photos/dak.png" alt="Diagram" />
@@ -158,11 +154,9 @@
     <div class="dashboard-page" id="page-cellulose">
       <div class="section section1">
         <header>
-          <h1>Cellulose (Sensor 3)</h1>
+          <h1>Cellulose</h1>
           <p class="intro-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            Cellulose is een ecologisch isolatiemateriaal dat wordt gemaakt van gerecycled krantenpapier — dus letterlijk oud nieuws in een nieuw jasje! Het isoleert uitstekend tegen kou én geluid, en past perfect bij wie circulair en duurzaam wil bouwen. Dankzij een toevoeging van natuurlijke zouten is cellulose brandwerend en bestand tegen schimmels en ongedierte. Het materiaal wordt ingeblazen, wat zorgt voor een naadloze isolatielaag zonder kieren. Met cellulose kies je voor comfort, hergebruik én een kleiner klimaatimpact.
           </p>
         </header>
       </div>
@@ -173,20 +167,20 @@
         <div class="sub-section sub2">
           <div class="hex-grid">
             <div class="hex-row even">
-              <div class="hex"><div class="hex-content">Binnentemp<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Buitensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Binnentemp<br><span id="binnen_cellulose">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum1_cellulose">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Buitensensor<br><span id="temp1_cellulose">N/A</span></div></div>
               <div class="line-right-1"></div>
             </div>
             <div class="hex-row odd">
-              <div class="hex"><div class="hex-content">Buitentemp<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Middensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Buitentemp<br><span id="buiten_cellulose">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum2_cellulose">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Middensensor<br><span id="temp2_cellulose">N/A</span></div></div>
               <div class="line-right-2"></div>
             </div>
             <div class="hex-row even2">
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Binnensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum3_cellulose">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Binnensensor<br><span id="temp3_cellulose">N/A</span></div></div>
               <div class="line-right-3"></div>
             </div>  
           </div>         
@@ -216,12 +210,10 @@
     <div class="dashboard-page" id="page-hemkor">
       <div class="section section1">
         <header>
-          <h1>Hemkor (Sensor 4)</h1>
+          <h1>Hemkor</h1>
           <p class="intro-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-          </p>
+            HemKor is een innovatief isolatiemateriaal dat natuurlijke hennepvezels en gerecycled jute combineert tot een duurzame en efficiënte oplossing. Dankzij de ademende structuur en uitstekende isolatiewaarde draagt HemKor bij aan een gezond en comfortabel binnenklimaat. Het materiaal is schimmelwerend, veilig te verwerken en volledig biobased, met een minimale impact op het milieu. HemKor is geschikt voor gebruik in daken, wanden en vloeren en past perfect binnen circulair en ecologisch bouwen. Kies voor HemKor en investeer in een toekomstbestendige woning én planeet.
+            </p>
         </header>
       </div>
       <div class="section section2">
@@ -231,20 +223,20 @@
         <div class="sub-section sub2">
           <div class="hex-grid">
             <div class="hex-row even">
-              <div class="hex"><div class="hex-content">Binnentemp<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Buitensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Binnentemp<br><span id="binnen_hemkor">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum1_hemkor">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Buitensensor<br><span id="temp1_hemkor">N/A</span></div></div>
               <div class="line-right-1"></div>
             </div>
             <div class="hex-row odd">
-              <div class="hex"><div class="hex-content">Buitentemp<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Middensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Buitentemp<br><span id="buiten_hemkor">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum2_hemkor">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Middensensor<br><span id="temp2_hemkor">N/A</span></div></div>
               <div class="line-right-2"></div>
             </div>
             <div class="hex-row even2">
-              <div class="hex"><div class="hex-content">Luchtvocht<br><span>N/A</span></div></div>
-              <div class="hex"><div class="hex-content">Binnensensor<br><span>N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum3_hemkor">N/A</span></div></div>
+              <div class="hex"><div class="hex-content">Binnensensor<br><span id="temp3_hemkor">N/A</span></div></div>
               <div class="line-right-3"></div>
             </div>  
           </div>         
